my second commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr>
         <h2>Articles:</h2>
         <article>
-            msa2 elward
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio aspernatur sit officiis reprehenderit quasi rem tempore deleniti quis vero qui. Veniam hic sit ipsum esse deleniti dicta et voluptatem placeat.<p>
         </article>
     <main>
 </body>
