--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <article>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio aspernatur sit officiis reprehenderit quasi rem tempore deleniti quis vero qui. Veniam hic sit ipsum esse deleniti dicta et voluptatem placeat.<p>
         </article>
+
+        <footer>
+           &copy;Ahmed Salama 2020. all rights reserved!  
+        <footer>
     <main>
 </body>
 </html>
