--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>welcome to Ahmed Salama blog</title>
 </head>
 <body>
@@ -14,10 +15,14 @@
         <article>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio aspernatur sit officiis reprehenderit quasi rem tempore deleniti quis vero qui. Veniam hic sit ipsum esse deleniti dicta et voluptatem placeat.<p>
         </article>
+        <h3>kher isa<h3>
+         <h4>m3 elsalama we el2alb da3elak</h4>  
+         <h5>abbas beh msa2 elfol</h5> 
 
-        <footer>
-           &copy;Ahmed Salama 2020. all rights reserved!  
-        <footer>
+       
     <main>
+    <footer>
+        &copy;Ahmed Salama 2020. all rights reserved!  
+    <footer>    
 </body>
 </html>
