add comment section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         <h1>welcome to Ahmed Salama blog</h1>
         <hr>
         <h2>Articles:</h2>
-        <article>
+        <article> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio aspernatur sit officiis reprehenderit quasi rem tempore deleniti quis vero qui. Veniam hic sit ipsum esse deleniti dicta et voluptatem placeat.<p>
         </article>
         <h3>kher isa<h3>
          <h4>m3 elsalama we el2alb da3elak</h4>  
-         <h5>abbas beh msa2 elfol</h5> 
+         <h5>abbas beh msa2 elfol</h5>
+         <h2>comments<h2>
+            <textarea cols="30"></textarea>
+            <br>
+            <button>comment</button>
 
        
     <main>
